# sk_pgp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  KNOWN_ISSUES.md  README.md  SECURITY.md  SOP.md  build.sh  deny.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/recon/: pgpy-callsites.md  pyo3-maturin-template.md  sequoia-pqc-api.md
examples/: README.md  classical_quickstart.py  pqc_v6_sign_verify.py
python/sk_pgp/: __init__.py
src/: lib.rs
tests/: test_inline_and_kem.py  test_pqc_subkeys_and_jwk.py  test_smoke.py
